Fix overflow admin

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,7 +1,7 @@
 html, body {
     width: 100vw;
     max-width: 100vw;
-    overflow-x: hidden !important;
+    overflow-x: hidden;
 }
 
 .ms-sidebar {
